--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,11 @@ secrets/*
 credentials.json
 
 ########################################
+# Local docs / notes (not for public repo)
+########################################
+docs/
+
+########################################
 # Editors / OS
 ########################################
 .vscode/
