Remove private.env.example and update documentation to reflect changes in environment variable management. Credentials are now stored directly in .env, simplifying the setup process and enhancing security by reducing the number of tracked files.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,16 @@
-# Defaults / behavior (CLI options can also be set via env for Docker/supercronic)
+# --- Required (fill in during setup) ---
+ZOHO_CLIENT_ID=
+ZOHO_CLIENT_SECRET=
+ZOHO_REFRESH_TOKEN=
+ZOHO_CALENDAR_UID=
+GOOGLE_CALENDAR_ID=
+ZOHO_ACCOUNTS_HOST=https://accounts.zoho.com
+
+# Relative paths to Google OAuth files (in secrets/)
+GOOGLE_CLIENT_SECRET_JSON=./secrets/google_client_secret.json
+GOOGLE_TOKEN_JSON=./secrets/google_token.json
+
+# --- Defaults / behavior (CLI options can also be set via env for Docker/supercronic) ---
 SYNC_LOOKBACK_DAYS=7
 SYNC_LOOKAHEAD_DAYS=90
 # Optional: explicit range (overrides *_DAYS when set): SYNC_SINCE=-7d SYNC_UNTIL=+90d
@@ -6,12 +18,6 @@ SYNC_LOOKAHEAD_DAYS=90
 # SYNC_UNTIL=
 TITLE_MODE=original   # busy | original
 Z2G_VERBOSE=0
-
-# Relative paths (resolved from project root)
-GOOGLE_CLIENT_SECRET_JSON=./secrets/google_client_secret.json
-GOOGLE_TOKEN_JSON=./secrets/google_token.json
-
-# Optional: default suffix (can be overridden in secrets/private.env)
 ICALUID_SUFFIX=zoho-mirror.example.com
 
 # Optional: override Google Calendar reminders (default = use calendar's default)
