Update .env.example and README to include Docker-specific environment variables for improved container configuration guidance.

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,11 @@ ICALUID_SUFFIX=zoho-mirror.example.com
 
 # Optional: Google auth manual flow (no local server). Z2G_GOOGLE_AUTH_MANUAL=1
 
+# --- Docker only (set on container or in .env when using Docker) ---
+# Z2G_SHELL=1           # Drop into bash and keep container running (for docker exec, setup)
+# Z2G_CRON_ENABLED=1    # Start supercronic (scheduled syncs); default is verify-and-exit
+# DATA_DIR=/data        # Project root in container; set on container if mount path differs
+
 # --- Alerting (for "run" only; ignored by "sync") ---
 # POST JSON to this URL when consecutive failures >= Z2G_ALERT_MIN_FAILURES (and rate/window allow)
 # Z2G_ALERT_WEBHOOK_URL=https://your-ha.example.com/api/webhook/z2g-alert
