--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,12 +1,11 @@
-# Build and push z2g Docker image to GitHub Container Registry (ghcr.io)
-# Image: ghcr.io/mathematicalmaker/zoho2gcal
 name: Docker publish
 
 on:
   push:
     branches: [main]
-  release:
-    types: [published]
+    tags:
+      - 'v*.*.*'
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -35,11 +34,9 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository_owner }}/zoho2gcal
           tags: |
-            type=ref,event=branch
-            type=sha,prefix=
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=sha,format=short,prefix=,enable={{is_default_branch}}
+            type=semver,pattern=v{{version}}
 
       - name: Build and push
         uses: docker/build-push-action@v6
@@ -49,5 +46,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          provenance: false
+          sbom: false
           cache-from: type=gha
           cache-to: type=gha,mode=max
