Enhance alerting functionality to support all-clear notifications after successful runs. Update README and .env.example for clarity on alert webhook payloads and configuration options. Refactor alerting logic to improve handling of alert hours and conditions.

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,8 @@ ICALUID_SUFFIX=zoho-mirror.example.com
 # Optional: delete from Google mirrored events in range that are no longer in Zoho (set to 1 to enable)
 # Z2G_DELETE_MISSING=1
 
-# Optional: Google auth manual flow (no local server). Z2G_GOOGLE_AUTH_MANUAL=1
+# Optional: Google auth manual flow (no local server). Only used for first time setup.
+# Z2G_GOOGLE_AUTH_MANUAL=1
 
 # --- Docker only (set on container or in .env when using Docker) ---
 # Z2G_SHELL=1           # Drop into bash and keep container running (for docker exec, setup)
@@ -36,10 +37,12 @@ ICALUID_SUFFIX=zoho-mirror.example.com
 
 # --- Alerting (for "run" only; ignored by "sync") ---
 # POST JSON to this URL when consecutive failures >= Z2G_ALERT_MIN_FAILURES (and rate/window allow)
-# Z2G_ALERT_WEBHOOK_URL=https://your-ha.example.com/api/webhook/z2g-alert
+# Easiest: Pushover webhook (create at pushover.net → Your Webhooks). Other options: Home Assistant, IFTTT, Zapier.
+# Z2G_ALERT_WEBHOOK_URL=https://your-pushover-webhook-url
 # Z2G_ALERT_STATE_FILE=.z2g-alert-state.json
 # Z2G_ALERT_MIN_FAILURES=2
 # Z2G_ALERT_RATE_HOURS=24
-# Z2G_ALERT_HOURS_START=8
+# Only send failure alerts when local time (Z2G_ALERT_TIMEZONE) is in this window. Examples: 10 and 22 = 10am–10pm; 22 and 2 = 10pm–2am (overnight). Use 24 for midnight.
+# Z2G_ALERT_HOURS_START=10
 # Z2G_ALERT_HOURS_END=22
 # Z2G_ALERT_TIMEZONE=America/Chicago
