Update alerting system to format last run time in local timezone for webhook payloads. Modify README to reflect changes in last_run field description. Add tests for new formatting function and update .dockerignore to exclude runtime state file.

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,6 +5,9 @@
 secrets/*
 !secrets/README.md
 
+# Runtime state (created by z2g run; never bake into image)
+.z2g-alert-state.json
+
 # Python / build
 .venv/
 __pycache__/
