--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,8 @@ Thumbs.db
 # Old images
 ########################################
 images/orig/
+
+########################################
+# Alert state file
+########################################
+.z2g-alert-state.json
