Update Dockerfile to include healthcheck script and enhance README with healthcheck details and new environment variable for healthcheck configuration. Add example to .env.example for healthcheck max age.

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,7 @@ ICALUID_SUFFIX=zoho-mirror.example.com
 # Z2G_SHELL=1           # Drop into bash and keep container running (for docker exec, setup)
 # Z2G_CRON_ENABLED=1    # Start supercronic (scheduled syncs); default is verify-and-exit
 # DATA_DIR=/data        # Project root in container; set on container if mount path differs
+# Z2G_HEALTH_MAX_AGE_MINUTES=35  # Max age (minutes) for HEALTHCHECK; default 35 (only meaningful when Z2G_CRON_ENABLED=1)
 
 # --- Alerting (for "run" only; ignored by "sync") ---
 # POST JSON to this URL when consecutive failures >= Z2G_ALERT_MIN_FAILURES (and rate/window allow)
